[gd_scene load_steps=15 format=3 uid="uid://1vlvhodcxwlh"]

[ext_resource type="TileSet" uid="uid://c4hobjpocyhwi" path="res://tileset.tres" id="1_pbihc"]
[ext_resource type="Script" path="res://Elevator.gd" id="1_pwtea"]
[ext_resource type="Texture2D" uid="uid://cpbj4uhe5cvg" path="res://assets/arrow.png" id="2_6nbhm"]
[ext_resource type="Shader" path="res://outline2D.gdshader" id="2_51sjf"]
[ext_resource type="Texture2D" uid="uid://1dj756pelprd" path="res://assets/elevator_door.png" id="5_551fy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cae8v"]
resource_local_to_scene = true
shader = ExtResource("2_51sjf")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/inverse_colors = false

[sub_resource type="Gradient" id="Gradient_ubro8"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_my2y1"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8igjx"]
width = 96
height = 96
color_ramp = SubResource("Gradient_ubro8")
noise = SubResource("FastNoiseLite_my2y1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lgqt"]
size = Vector2(768, 870)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbd5m"]
size = Vector2(256, 32)

[sub_resource type="Gradient" id="Gradient_jblpw"]
offsets = PackedFloat32Array(0.00645161, 1)
colors = PackedColorArray(0.164706, 0.164706, 0.164706, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5esh4"]
gradient = SubResource("Gradient_jblpw")
width = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r4hdt"]
size = Vector2(704, 704)

[node name="Elevator" type="Node2D" groups=["elevator"]]
script = ExtResource("1_pwtea")

[node name="Outline" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_cae8v")
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(8, 8)
texture = SubResource("NoiseTexture2D_8igjx")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(8, 8)
tile_set = ExtResource("1_pbihc")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 1, 17, -2, 1, 17, -3, 1, 17, -4, 1, 17, -9, 1, 17, -10, 1, 17, -11, 1, 17, -12, 1, 16, -65537, 1, 17, -131073, 1, 17, -196609, 1, 17, -524289, 1, 17, -589825, 1, 17, -655361, 1, 17, -720897, 1, 16, -65548, 1, 16, -65547, 1, 17, -65546, 1, 17, -65545, 1, 17, -65544, 1, 17, -65543, 1, 17, -65542, 1, 17, -65541, 1, 17, -5, 1, 17, -6, 1, 17, -7, 1, 17, -8, 1, 17, 0, 1, 17, 65536, 1, 17, 131072, 1, 17, 196608, 1, 17, 524288, 1, 17, 589824, 1, 17, 655360, 1, 17, 720896, 1, 18, 1, 1, 17, 2, 1, 17, 3, 1, 17, 8, 1, 17, 9, 1, 17, 10, 1, 17, 11, 1, 16, -720908, 1, 16, -655372, 1, 16, -589836, 1, 16, -524300, 1, 16, -458764, 1, 16, -393228, 1, 16, -327692, 1, 16, -262156, 1, 16, -196620, 1, 16, -131084, 1, 16, 65524, 1, 16, 131060, 1, 16, 196596, 1, 16, 262132, 1, 16, 327668, 1, 16, 393204, 1, 16, 458740, 1, 16, 524276, 1, 16, 589812, 1, 16, 655348, 1, 16, 720884, 1, 16, 786420, 1, 16, -720907, 1, 16, -655371, 1, 17, -589835, 1, 17, -524299, 1, 17, -458763, 1, 17, -393227, 1, 17, -327691, 1, 17, -262155, 1, 17, -196619, 1, 17, -131083, 1, 17, 65525, 1, 17, 131061, 1, 17, 196597, 1, 17, 262133, 1, 17, 327669, 1, 17, 393205, 1, 17, 458741, 1, 17, 524277, 1, 17, 589813, 1, 17, 655349, 1, 17, 720885, 1, 17, 786421, 1, 16, -720906, 1, 16, -655370, 1, 17, -589834, 1, 17, -524298, 1, 17, -458762, 1, 17, -393226, 1, 17, -327690, 1, 17, -262154, 1, 17, -196618, 1, 17, -131082, 1, 17, 65526, 1, 17, 131062, 1, 17, 196598, 1, 17, 262134, 1, 17, 327670, 1, 17, 393206, 1, 17, 458742, 1, 17, 524278, 1, 17, 589814, 1, 17, 655350, 1, 17, 720886, 1, 17, 786422, 1, 16, -720905, 1, 16, -655369, 1, 17, -589833, 1, 17, -524297, 1, 17, -458761, 1, 17, -393225, 1, 17, -327689, 1, 17, -262153, 1, 17, -196617, 1, 17, -131081, 1, 17, 65527, 1, 17, 131063, 1, 17, 196599, 1, 17, 262135, 1, 17, 327671, 1, 17, 393207, 1, 17, 458743, 1, 17, 524279, 1, 17, 589815, 1, 17, 655351, 1, 17, 720887, 1, 17, 786423, 1, 16, -720904, 1, 16, -655368, 1, 17, -589832, 1, 17, -524296, 1, 17, -458760, 1, 17, -393224, 1, 17, -327688, 1, 17, -262152, 1, 17, -196616, 1, 17, -131080, 1, 17, 65528, 1, 17, 131064, 1, 17, 196600, 1, 17, 262136, 1, 17, 327672, 1, 17, 393208, 1, 17, 458744, 1, 17, 524280, 1, 17, 589816, 1, 17, 655352, 1, 17, 720888, 1, 17, 786424, 1, 18, -720903, 1, 16, -655367, 1, 17, -589831, 1, 17, -524295, 1, 17, -458759, 1, 17, -393223, 1, 17, -327687, 1, 17, -262151, 1, 17, -196615, 1, 17, -131079, 1, 17, 65529, 1, 17, 131065, 1, 17, 196601, 1, 17, 262137, 1, 17, 327673, 1, 17, 393209, 1, 17, 458745, 1, 17, 524281, 1, 17, 589817, 1, 17, 655353, 1, 17, 720889, 1, 17, 786425, 1, 18, -720902, 1, 16, -655366, 1, 17, -589830, 1, 17, -524294, 1, 17, -458758, 1, 17, -393222, 1, 17, -327686, 1, 17, -262150, 1, 17, -196614, 1, 17, -131078, 1, 17, 65530, 1, 17, 131066, 1, 17, 196602, 1, 17, 262138, 1, 17, 327674, 1, 17, 393210, 1, 17, 458746, 1, 17, 524282, 1, 17, 589818, 1, 17, 655354, 1, 17, 720890, 1, 17, 786426, 1, 18, -720901, 1, 16, -655365, 1, 17, -589829, 1, 17, -524293, 1, 17, -458757, 1, 17, -393221, 1, 17, -327685, 1, 17, -262149, 1, 17, -196613, 1, 17, -131077, 1, 17, 65531, 1, 17, 131067, 1, 17, 196603, 1, 17, 262139, 1, 17, 327675, 1, 17, 393211, 1, 17, 458747, 1, 17, 524283, 1, 17, 589819, 1, 17, 655355, 1, 17, 720891, 1, 17, 786427, 1, 18, -720900, 1, 16, -655364, 1, 17, -589828, 1, 17, -524292, 1, 17, -458756, 1, 17, -393220, 1, 17, -327684, 1, 17, -262148, 1, 17, -196612, 1, 17, -131076, 1, 17, -65540, 1, 17, 65532, 1, 17, 131068, 1, 17, 196604, 1, 17, 262140, 1, 17, 327676, 1, 17, 393212, 1, 17, 458748, 1, 17, 524284, 1, 17, 589820, 1, 17, 655356, 1, 17, 720892, 1, 17, 786428, 1, 18, -720899, 1, 16, -655363, 1, 17, -589827, 1, 17, -524291, 1, 17, -458755, 1, 17, -393219, 1, 17, -327683, 1, 17, -262147, 1, 17, -196611, 1, 17, -131075, 1, 17, -65539, 1, 17, 65533, 1, 17, 131069, 1, 17, 196605, 1, 17, 262141, 1, 17, 327677, 1, 17, 393213, 1, 17, 458749, 1, 17, 524285, 1, 17, 589821, 1, 17, 655357, 1, 17, 720893, 1, 17, 786429, 1, 18, -720898, 1, 16, -655362, 1, 17, -589826, 1, 17, -524290, 1, 17, -458754, 1, 17, -393218, 1, 17, -327682, 1, 17, -262146, 1, 17, -196610, 1, 17, -131074, 1, 17, -65538, 1, 17, 65534, 1, 17, 131070, 1, 17, 196606, 1, 17, 262142, 1, 17, 327678, 1, 17, 393214, 1, 17, 458750, 1, 17, 524286, 1, 17, 589822, 1, 17, 655358, 1, 17, 720894, 1, 17, 786430, 1, 18, -458753, 1, 17, -393217, 1, 17, -327681, 1, 17, -262145, 1, 17, 65535, 1, 17, 131071, 1, 17, 196607, 1, 17, 262143, 1, 17, 327679, 1, 17, 393215, 1, 17, 458751, 1, 17, 524287, 1, 17, 589823, 1, 17, 655359, 1, 17, 720895, 1, 17, 786431, 1, 18, -786432, 1, 16, -720896, 1, 17, -655360, 1, 17, -589824, 1, 17, -524288, 1, 17, -458752, 1, 17, -393216, 1, 17, -327680, 1, 17, -262144, 1, 17, -196608, 1, 17, -131072, 1, 17, -65536, 1, 17, 262144, 1, 17, 327680, 1, 17, 393216, 1, 17, 458752, 1, 17, -786431, 1, 16, -720895, 1, 17, -655359, 1, 17, -589823, 1, 17, -524287, 1, 17, -458751, 1, 17, -393215, 1, 17, -327679, 1, 17, -262143, 1, 17, -196607, 1, 17, -131071, 1, 17, -65535, 1, 17, 65537, 1, 17, 131073, 1, 17, 196609, 1, 17, 262145, 1, 17, 327681, 1, 17, 393217, 1, 17, 458753, 1, 17, 524289, 1, 17, 589825, 1, 17, 655361, 1, 17, 720897, 1, 18, -786430, 1, 16, -720894, 1, 17, -655358, 1, 17, -589822, 1, 17, -524286, 1, 17, -458750, 1, 17, -393214, 1, 17, -327678, 1, 17, -262142, 1, 17, -196606, 1, 17, -131070, 1, 17, -65534, 1, 17, 65538, 1, 17, 131074, 1, 17, 196610, 1, 17, 262146, 1, 17, 327682, 1, 17, 393218, 1, 17, 458754, 1, 17, 524290, 1, 17, 589826, 1, 17, 655362, 1, 17, 720898, 1, 18, -786429, 1, 16, -720893, 1, 17, -655357, 1, 17, -589821, 1, 17, -524285, 1, 17, -458749, 1, 17, -393213, 1, 17, -327677, 1, 17, -262141, 1, 17, -196605, 1, 17, -131069, 1, 17, -65533, 1, 17, 65539, 1, 17, 131075, 1, 17, 196611, 1, 17, 262147, 1, 17, 327683, 1, 17, 393219, 1, 17, 458755, 1, 17, 524291, 1, 17, 589827, 1, 17, 655363, 1, 17, 720899, 1, 18, -786428, 1, 16, -720892, 1, 17, -655356, 1, 17, -589820, 1, 17, -524284, 1, 17, -458748, 1, 17, -393212, 1, 17, -327676, 1, 17, -262140, 1, 17, -196604, 1, 17, -131068, 1, 17, -65532, 1, 17, 4, 1, 17, 65540, 1, 17, 131076, 1, 17, 196612, 1, 17, 262148, 1, 17, 327684, 1, 17, 393220, 1, 17, 458756, 1, 17, 524292, 1, 17, 589828, 1, 17, 655364, 1, 17, 720900, 1, 18, -786427, 1, 16, -720891, 1, 17, -655355, 1, 17, -589819, 1, 17, -524283, 1, 17, -458747, 1, 17, -393211, 1, 17, -327675, 1, 17, -262139, 1, 17, -196603, 1, 17, -131067, 1, 17, -65531, 1, 17, 5, 1, 17, 65541, 1, 17, 131077, 1, 17, 196613, 1, 17, 262149, 1, 17, 327685, 1, 17, 393221, 1, 17, 458757, 1, 17, 524293, 1, 17, 589829, 1, 17, 655365, 1, 17, 720901, 1, 18, -786426, 1, 16, -720890, 1, 17, -655354, 1, 17, -589818, 1, 17, -524282, 1, 17, -458746, 1, 17, -393210, 1, 17, -327674, 1, 17, -262138, 1, 17, -196602, 1, 17, -131066, 1, 17, -65530, 1, 17, 6, 1, 17, 65542, 1, 17, 131078, 1, 17, 196614, 1, 17, 262150, 1, 17, 327686, 1, 17, 393222, 1, 17, 458758, 1, 17, 524294, 1, 17, 589830, 1, 17, 655366, 1, 17, 720902, 1, 18, -786425, 1, 16, -720889, 1, 17, -655353, 1, 17, -589817, 1, 17, -524281, 1, 17, -458745, 1, 17, -393209, 1, 17, -327673, 1, 17, -262137, 1, 17, -196601, 1, 17, -131065, 1, 17, -65529, 1, 17, 7, 1, 17, 65543, 1, 17, 131079, 1, 17, 196615, 1, 17, 262151, 1, 17, 327687, 1, 17, 393223, 1, 17, 458759, 1, 17, 524295, 1, 17, 589831, 1, 17, 655367, 1, 17, 720903, 1, 18, -786424, 1, 16, -720888, 1, 17, -655352, 1, 17, -589816, 1, 17, -524280, 1, 17, -458744, 1, 17, -393208, 1, 17, -327672, 1, 17, -262136, 1, 17, -196600, 1, 17, -131064, 1, 17, -65528, 1, 17, 65544, 1, 17, 131080, 1, 17, 196616, 1, 17, 262152, 1, 17, 327688, 1, 17, 393224, 1, 17, 458760, 1, 17, 524296, 1, 17, 589832, 1, 17, 655368, 1, 17, 720904, 1, 16, -786423, 1, 16, -720887, 1, 17, -655351, 1, 17, -589815, 1, 17, -524279, 1, 17, -458743, 1, 17, -393207, 1, 17, -327671, 1, 17, -262135, 1, 17, -196599, 1, 17, -131063, 1, 17, -65527, 1, 17, 65545, 1, 17, 131081, 1, 17, 196617, 1, 17, 262153, 1, 17, 327689, 1, 17, 393225, 1, 17, 458761, 1, 17, 524297, 1, 17, 589833, 1, 17, 655369, 1, 17, 720905, 1, 16, -786422, 1, 16, -720886, 1, 17, -655350, 1, 17, -589814, 1, 17, -524278, 1, 17, -458742, 1, 17, -393206, 1, 17, -327670, 1, 17, -262134, 1, 17, -196598, 1, 17, -131062, 1, 17, -65526, 1, 17, 65546, 1, 17, 131082, 1, 17, 196618, 1, 17, 262154, 1, 17, 327690, 1, 17, 393226, 1, 17, 458762, 1, 17, 524298, 1, 17, 589834, 1, 17, 655370, 1, 17, 720906, 1, 16, -786421, 1, 16, -720885, 1, 16, -655349, 1, 16, -589813, 1, 16, -524277, 1, 16, -458741, 1, 16, -393205, 1, 16, -327669, 1, 16, -262133, 1, 16, -196597, 1, 16, -131061, 1, 16, -65525, 1, 16, 65547, 1, 16, 131083, 1, 16, 196619, 1, 16, 262155, 1, 16, 327691, 1, 16, 393227, 1, 16, 458763, 1, 16, 524299, 1, 16, 589835, 1, 16, 655371, 1, 16, 720907, 1, 16)

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 51)
shape = SubResource("RectangleShape2D_4lgqt")

[node name="LeftDoor" type="Node2D" parent="."]
position = Vector2(-256, 368)

[node name="Sprite" type="Sprite2D" parent="LeftDoor"]
position = Vector2(128, 0)
rotation = 3.14159
scale = Vector2(8, 8)
texture = ExtResource("5_551fy")

[node name="StaticBody2D" type="StaticBody2D" parent="LeftDoor"]
position = Vector2(128, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftDoor/StaticBody2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
shape = SubResource("RectangleShape2D_mbd5m")

[node name="RightDoor" type="Node2D" parent="."]
position = Vector2(256, 368)

[node name="Sprite" type="Sprite2D" parent="RightDoor"]
position = Vector2(-128, 0)
scale = Vector2(8, 8)
texture = ExtResource("5_551fy")

[node name="StaticBody2D2" type="StaticBody2D" parent="RightDoor"]
position = Vector2(-256, -368)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightDoor/StaticBody2D2"]
position = Vector2(128, 368)
shape = SubResource("RectangleShape2D_mbd5m")

[node name="Void" type="Sprite2D" parent="."]
position = Vector2(-2.09808e-05, 4.19617e-05)
scale = Vector2(704, 704)
texture = SubResource("GradientTexture1D_5esh4")

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(8, 8)
texture = ExtResource("2_6nbhm")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CallTooltip" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
offset_left = -75.0
offset_top = -20.0
offset_right = 75.0
offset_bottom = 20.0
scale = Vector2(0.998947, 1)
pivot_offset = Vector2(75, 20)

[node name="RichTextLabel" type="RichTextLabel" parent="CallTooltip"]
layout_mode = 2
size_flags_vertical = 4
bbcode_enabled = true
text = "[center]Call elevator [b][color=yellow][lb]E[rb][/color][/b][/center]"
fit_content = true

[node name="BusyTooltip" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
offset_left = -75.0
offset_top = -20.0
offset_right = 75.0
offset_bottom = 20.0
scale = Vector2(0.998947, 1)
pivot_offset = Vector2(75, 20)

[node name="RichTextLabel" type="RichTextLabel" parent="BusyTooltip"]
layout_mode = 2
size_flags_vertical = 4
bbcode_enabled = true
text = "[center][color=gray]Elevator Busy[/color][/center]"
fit_content = true

[node name="FarTooltip" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 40)
offset_left = -75.0
offset_top = -20.0
offset_right = 75.0
offset_bottom = 20.0
scale = Vector2(0.998947, 1)
pivot_offset = Vector2(75, 20)

[node name="RichTextLabel" type="RichTextLabel" parent="FarTooltip"]
layout_mode = 2
size_flags_vertical = 4
bbcode_enabled = true
text = "[center][color=gray]Too far[/color][/center]"
fit_content = true

[node name="TeleportArea" type="Area2D" parent="."]
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TeleportArea"]
shape = SubResource("RectangleShape2D_r4hdt")
